Fixed the column sizing again. Adjusted breakpoints to stop the "bouncing column" issue on mobile devices.

--- a/app/javascript/styles/gabsocial/components.scss
+++ b/app/javascript/styles/gabsocial/components.scss
@@ -1317,16 +1317,18 @@ a.account__display-name {
 		}
 
 		&__main {
+			display: flex;
+			flex-direction: column;
 			box-sizing: border-box;
 			width: 100%;
 			max-width: 600px;
-			display: flex;
-			flex-direction: column;
-
-			@media screen and (min-width: 360px) {
+			padding: 0 20px;
+			@media screen and (max-width: 375px) {
+				padding: 0 10px;
+			}
+			@media screen and (min-width: 895px) {
 				margin: 0 20px;
 				padding: 0;
-				//padding: 0 10px;
 			}
 		}
 	}
